Summary of important user-visible changes for releases of the geometry package

===============================================================================
geometry-1.4.2   Release Date: 2012-XX-XX  Release Manager: Juan Pablo Carbajal
===============================================================================

* Added function
 - curveval.m: Evaluates a polynomial curve defined as a 2-by-N matrix.
 - curve2polyline.m: Converts a polynomial curve into a polyline by the adaptive
                     sampling method.

* Changed functions
 - distancePointEdge.m: Now the function computes the distance between all points
                        and all edges. A third optional argument provides
                        backward compatibility.

* Known issues
 - simplifypolygon.m returns empty polygons when points are repeated, i.e when
  the polygon is not correctly formed.

===============================================================================
geometry-1.4.1   Release Date: 2012-03-24  Release Manager: Juan Pablo Carbajal
===============================================================================

* Renamed functions
 - Contents.m renamed to geom2d_Contents to avoid clashes.

* Deprecated functions
 - svgload, svgnormalize, svgpath2polygon: Use the methods in class svg.

* Bug fixes
 - @svg/path2polygon.m
 - Fix addpath/rmpath installation warnings
 - Fix octclip/src/Makefile
 - Fix shapecentriod.m for piece-wise polynomial shapes.

* Known issues
 - simplifypolygon.m returns empty polygons when points are repeated, i.e when
  the polygon is not correctly formed.


===============================================================================
geometry-1.4.0   Release Date: 2012-01-25   Release Manager: Juan Pablo Carbajal
===============================================================================

* Added basic geometric graphs creation and manipulation.


===============================================================================